# irss-backend

./: .gitignore  Dockerfile  README.md  exam.py  pyproject.toml  test.db
.workflow/: pipeline-20230616.yml
alembic/versions/: b96be5f2796f_init.py
app/: config.py  example.json  initial_data.py  main.py
app/api/: deps.py  resp.py  routers.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  entry.py  feed.py  feeds.py  item.py  mans.py  user.py  users.py
app/common/: logger.py
app/common/db/: database.py  init_db.py
app/common/extension/: exc_handler.py
app/common/middleware/: middleware_add.py
app/common/response/: resp.py  state.py
app/common/scheduler/: scheduler.py
app/core/: entry_append.py  feed_parser.py  users.py
app/crud/: __init__.py  entries.py  feeds.py  mans.py  users.py
app/db/: database.py  init_db.py
app/extensions/: exc_handler.py  logger.py
app/item/: crud.py  model.py  schema.py
app/items_example/: crud.py  model.py  schema.py
app/models/: __init__.py  entries.py  entry.py  entry_tag.py  entry_tags.py  feed_groups.py  feeds.py  mans.py  users.py
app/schemas/: __init__.py  entries.py  feeds.py  mans.py  users.py
app/static/: example.json  preview.html
app/tests/test_items_example/: test_api.py  test_crud.py
app/utils/: paged.py  resp.py  response_format.py  response_model.py  time_util.py  tools_func.py
src/irss/: __init__.py
