[project]
name = "irss"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "zhuxining", email = "zhuxining@outlook.com" }
]
dependencies = [    
    "fastapi-users[beanie,oauth]>=11.0.0",
    "fastapi>=0.95.1",
    "uvicorn>=0.22.0",
    "setuptools>=67.7.2",
    "loguru>=0.7.0",
    "feedparser>=6.0.10",
    "apscheduler>=3.10.1",]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.3.0",
    "isort>=5.12.0",
    "httpx>=0.23.3",
    "pytest>=7.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F"]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
# Never try to fix `F401` (unused imports).
unfixable = ["F401"]


[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
ignore_missing_annotations = false 
allow_subclassing_private_name = true
allow_redefinition_of_alias_in_stub = true
postpone_any_foreground = true   
check_typeshed_only = true
strict_optional = true
warn_error = true
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
