[project]
name = "irss"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "zhuxining", email = "zhuxining@outlook.com" }
]
dependencies = [
    "fastapi-users[beanie,oauth]>=12.1.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "setuptools>=68.2.2",
    "loguru>=0.7.2",
    "feedparser>=6.0.10",
    "apscheduler>=3.10.4",
    "pydantic>=2.4.2",
    "beanie>=1.23.0",
    "pydantic-settings>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "httpx>=0.23.3",
    "pytest>=7.3.1",
    "mypy>=1.6.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F"]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
# Never try to fix `F401` (unused imports).
unfixable = ["F401"]


[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
ignore_missing_annotations = false
allow_subclassing_private_name = true
allow_redefinition_of_alias_in_stub = true
postpone_any_foreground = true
check_typeshed_only = true
strict_optional = true
warn_error = true
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
