[project]
name = "irss"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "zhuxining", email = "zhuxining@outlook.com" }]
dependencies = [
    "fastapi-users[beanie,oauth]>=12.1.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "setuptools>=68.2.2",
    "loguru>=0.7.2",
    "feedparser>=6.0.10",
    "apscheduler>=3.10.4",
    "pydantic>=2.4.2",
    "beanie>=1.23.0",
    "pydantic-settings>=2.0.3",
    "ruff>=0.1.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["httpx>=0.23.3", "pytest>=7.3.1", "mypy>=1.6.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F"]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
# Never try to fix `F401` (unused imports).
unfixable = ["F401"]
